base/sensu/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sensu-svc
  namespace: sensu
spec:
  selector:
    app: sensu
  type: ClusterIP
  ports:
  - port: 3000
    name: web-ui
  - port: 8080
    name: sensu-api
  - port: 8081
    name: agent-api
